Plants aligned correctly.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,3 +4,7 @@ body {
 	padding-top: 30px;
     background: #fafafa;
 }
+
+.hero-unit {
+	padding: none;
+}
